test/integration/bad/jacobian_pe_bad.stan
functions {
  real foo(){
    return 1.0;
  }
}

transformed parameters {
  jacobian += foo;
}
